third_party/move/move-compiler-v2/tests/more-v1/parser/global_access_value.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/global_access_value.move:3:13
  │
3 │         1 + ::global_value
  │             ^^
  │             │
  │             Unexpected '::'
  │             Expected an expression term
